# viktal_c_iz2

./: .gitignore  CMakeLists.txt
.github/workflows/: build-test.yaml  checks.yaml
emailfilter/: CMakeLists.txt
emailfilter/include/emailfilter/: date.h  email.h  filter.h  utils.h
emailfilter/interface/emailfilter/: date.h  email.h  filter.h  utils.h
emailfilter/src/: date.c  email.c  filter.c  filter.h  filter_pthread.c  filter_sequential.c  utils.c
src/: CMakeLists.txt  app.c
tests/: 199911.txt  201105.txt  CMakeLists.txt  stress-test.sh  test_date.cpp  test_email.cpp  test_filter.cpp  test_utils.cpp
